# RISCV-CPU-Simulator

./: CMakeLists.txt  code
src/: CMakeLists.txt
src/RegisterFile/: RegisterFile.cpp  RegisterFile.h
src/ReorderBuffer/: ReorderBuffer.cpp  ReorderBuffer.h  ReorderBufferType.cpp  ReorderBufferType.h
src/ReservationStation/: ReservationStation.cpp  ReservationStation.h  ReservationStationType.cpp  ReservationStationType.h
src/main/: main.cpp  main.h
src/memory/: memory.cpp  memory.h
src/parser/: parser.cpp  parser.h
src/predictor/: predictor.cpp  predictor.h
src/utils/: utils.cpp  utils.h
